Fix media title thumbnail overlapping issue

--- a/app/assets/css/rtmedia.css
+++ b/app/assets/css/rtmedia.css
@@ -857,7 +857,7 @@ button::-moz-focus-inner {
   padding: 0;
   width: 90px;
   height: 110px;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   opacity: 0;
   z-index: 10;
   -webkit-transition: all 300ms ease-out;
@@ -1715,11 +1715,15 @@ img.mfp-img {
   border-bottom: 0;
   padding-bottom: 0;
 }
+#buddypress ul.activity-list li {
+  overflow: unset !important;
+}
 
 .rtmedia-activity-container .rtmedia-item-actions {
   display: none;
 }
-.rtmedia-activity-container .rtmedia-item-title, .rtmedia-activity-container .rtmedia-item-title a {
+.rtmedia-activity-container .rtmedia-item-title,
+.rtmedia-activity-container .rtmedia-item-title a {
   border: 0;
   color: #666666;
   font-size: 13px;
@@ -1839,7 +1843,8 @@ form.rt_media_comment_form .rtmedia-plupload-container {
   margin-top: 15px;
 }
 
-.ac-form .rtmedia-uploader-div, .rt_media_comment_form .rtmedia-uploader-div {
+.ac-form .rtmedia-uploader-div,
+.rt_media_comment_form .rtmedia-uploader-div {
   opacity: 1;
   display: block;
   visibility: visible;
@@ -1856,6 +1861,10 @@ a.rtmedia-comment-link {
 
 a.rtmedia-comment-link.rtmedia-comments-link {
   display: initial;
+}
+
+.mejs-poster.mejs-layer {
+  height: 0 !important;
 }
 
 .rtmedia-album-edit .rtm-checkbox-wrap {
@@ -2936,7 +2945,7 @@ a.rtmedia-upload-media-link {
 #buddypress .mejs-controls button {
   padding: 4px 8px;
   border: none;
-  background: transparent url("../../../lib/media-element/mejs-controls.png") no-repeat;
+  background: rgba(0, 0, 0, 0) url("../../../lib/media-element/mejs-controls.png") no-repeat;
 }
 #buddypress .mejs-controls .mejs-play > button {
   background-position: 0 0;
